<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="davit.kotlin.room.mvvm.view.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <View
        android:layout_width="@dimen/dim_0dp"
        android:layout_height="@dimen/dim_1dp"
        android:background="@color/slim_line_color"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="@dimen/dim_0dp"
        android:layout_height="@dimen/dim_0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblInsertHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_top_margin"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtUsername"
            style="@style/TextInputLayoutStyle"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:textColorHint="@color/hint_text_color"
            android:layout_marginTop="@dimen/title_top_margin"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblInsertHeading"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_input"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

<!--        <androidx.appcompat.widget.AppCompatEditText-->
<!--            android:id="@+id/txtUsername"-->
<!--            android:layout_width="@dimen/dim_0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@color/black"-->
<!--            android:hint="@string/username_hint"-->
<!--            android:textColorHint="@color/hint_text_color"-->
<!--            android:layout_marginTop="@dimen/title_top_margin"-->
<!--            android:layout_marginStart="@dimen/margin_start"-->
<!--            android:layout_marginEnd="@dimen/margin_end"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/lblInsertHeading" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPassword"
            style="@style/TextInputLayoutStyle"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:textColorHint="@color/hint_text_color"
            android:layout_marginTop="@dimen/title_top_margin"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUsername"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

<!--        <androidx.appcompat.widget.AppCompatEditText-->
<!--            android:id="@+id/txtPassword"-->
<!--            android:layout_width="@dimen/dim_0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@color/black"-->
<!--            android:hint="@string/password_hint"-->
<!--            android:textColorHint="@color/hint_text_color"-->
<!--            android:layout_marginTop="@dimen/title_top_margin"-->
<!--            android:layout_marginStart="@dimen/margin_start"-->
<!--            android:layout_marginEnd="@dimen/margin_end"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/txtUsername" />-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddLogin"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_top_margin"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:background="@drawable/button_rounded_green_shape"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword"
            android:text="@string/insert_credentials_btn_text"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblInsertResponse"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:text="@string/insert_response_field"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            android:layout_margin="@dimen/dim_20dp"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/line_space"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/dim_0dp"
        android:layout_height="@dimen/dim_0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblReadHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reading_and_displaying_data_from_room"
            android:textColor="@color/black"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/title_top_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnReadLogin" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblUseraname"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:text="@string/insert_response_field"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            android:layout_margin="@dimen/dim_20dp"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/line_space"
            android:padding="@dimen/padding_10dp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblReadHeading" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblPassword"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:text="@string/insert_response_field"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            android:layout_margin="@dimen/dim_20dp"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/line_space"
            android:padding="@dimen/padding_10dp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblUseraname" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnReadLogin"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/read_btn_title"
            android:layout_marginTop="@dimen/margin_top_10dp"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:background="@drawable/button_rounded_green_shape"
            android:textColor="@color/white"
            android:text="@string/click_to_read_credentials_from_room"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblReadResponse"
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_20dp"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/line_space"
            android:text="@string/insert_response_field"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>